# portfolio-resume

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
nextjs/: .env.example  .eslintrc.json  .gitignore  Dockerfile  healthcheck.js  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js  tsconfig.json
nextjs/prisma/: dev.db  schema.prisma
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/app/admin/: page.tsx
nextjs/src/app/api/generate-pdf/: route.ts
nextjs/src/app/api/resume/: route.ts
nextjs/src/app/auth/signin/: page.tsx
nextjs/src/app/contact/: page.tsx
nextjs/src/app/health/: route.ts
nextjs/src/app/projects/: page.tsx
nextjs/src/app/resume/: page.tsx
nextjs/src/components/home/: About.tsx  Contact.tsx  Hero.tsx  Projects.tsx  Skills.tsx
nextjs/src/components/layout/: Footer.tsx  Header.tsx  ThemeProvider.tsx
nextjs/src/components/resume/: ResumePreview.tsx  ResumeSection.tsx  ResumeTemplate.tsx  TemplateSelector.tsx  page.tsx
nextjs/src/components/ui/: Button.tsx  Card.tsx  LoadingSpinner.tsx
nextjs/src/data/: resume.json
nextjs/src/lib/: auth.ts  pdf-service.ts  resume-data.ts  resume-server.ts  utils.ts
nextjs/src/styles/: globals.css
nextjs/src/types/: index.ts  resume.ts
nginx/: nginx.conf
pdf-service/: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
pdf-service/services/: __init__.py  cache.py  pdf_generator.py  resume_template.py
pdf-service/utils/: __init__.py  security.py
(+3 files in other folders)
