[tool.poetry]
name = "pdf-service"
version = "1.0.0"
description = "PDF generation microservice using WeasyPrint"
authors = ["Robel Fekadu <robelfekadu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
weasyprint = "^73.2"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pydantic = "^2.5.3"
redis = "^5.0.1"
httpx = "^0.26.0"
cryptography = "^41.0.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.26.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"